# roland-rds

./: .gitignore  Cargo.toml  FUNDING.yml  README.md
derive/: Cargo.toml
derive/src/: helpers.rs  lib.rs  parameters.rs
examples/: junk.rds
examples/rd300nx/: AJGS-2016.RDS  AM.RDS  ASSIGN.RDS  BLANK.RDS  BMC-1.RDS  BMC-2.RDS  C1-MAX.RDS  CGS-2014.RDS  CGS-2017-v1.RDS  CGS-20170704.RDS  CH-D.RDS  CH.RDS  CHO-REV-DFLTS.RDS  CHO-REV.RDS  COMMON.RDS  COMP_127.RDS  COMP_ON.RDS  CONTROL.RDS  D1.RDS  DEFAULT1.RDS  DEFAULT2.RDS  DEFAULT3.RDS  DEFAULT_RESAVED.RDS  DUST-1.RDS  DUST-2.RDS  EFFECT-AM.RDS  EFFECTS.RDS  EMPTY.RDS  EXTERNAL.RDS  FLAGS.RDS  FOCUS.RDS  GS-2015-V1.RDS  GS-2015-V2.RDS  HAIR.RDS  HAM-CHAR.RDS  LEASE-2017-05-10.RDS  LEASE-2017-05-28.RDS  LEASE-2017-05-30.RDS  LEASE-2017-05-31.RDS  LEASE.RDS  (+107 more)
schema/: rd300nx.json
src/: bits.rs  bytes.rs  main.rs  roland.rs
src/bytes/: bit_stream.rs  bits.rs  mod.rs
src/json/: mod.rs  schema.rs  serialize_array_as_vec.rs  serialize_chars_as_string.rs  serialize_default_terminated_array.rs  serialize_fromstr_display.rs  serialize_map_keys_in_order.rs  validation.rs  warnings.rs
src/roland/: layers.rs  live_set.rs  mod.rs  rd300nx.rs  tests.rs  tones.rs  types.rs
src/roland/layers/: e_piano.rs  external.rs  internal.rs  mod.rs  piano.rs  tone.rs  tone_wheel.rs
src/roland/live_set/: chorus.rs  common.rs  mfx.rs  mod.rs  resonance.rs  reverb.rs  song_rhythm.rs
src/roland/system/: common.rs  compressor.rs  mod.rs  (+3 more)
tones/: TONES0.RDS  TONES1.RDS  TONES3.RDS  tones0.json  tones1.json  tones2.json  tones3.json
(+14 files in other folders)
