[package]
name = "roland-rds"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
chrono = "0.4.23"
strum = "0.24.1"
strum_macros = "0.24.1"
test-case = "3.0.0"
